add latest api
